--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -129,7 +129,7 @@ body, html {
     margin-top: -35px;
     width: 50px;
     height: 3px;
-    background-color: var(--theme--color);
+    background-color: var(--theme-color);
 }
 
 #topTitle {
