--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -124,12 +124,12 @@ body, html {
 }
 
 .underlineTop {
-    position: absolute;
-    left: calc(50% - 25px);
-    margin-top: -35px;
-    width: 50px;
-    height: 3px;
-    background-color: var(--theme-color);
+   position: absolute;
+   left: calc(50% - 25px);
+   margin-top: -35px;
+   width: 50px;
+   height: 3px;
+   background-color: #fff;
 }
 
 #topTitle {
