--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -417,7 +417,7 @@
     color: var(--main-color);
   }
   
-  .button{
+  .buttonTop{
     padding: 9px 25px;
     background-color: var(--main-color);
     border: none;
@@ -428,7 +428,7 @@
     font-weight: bold;
   }
   
-  .button:hover{
+  .buttonTop:hover{
     background-color: #ffffff;
     color: var(--main-color);
   }
@@ -652,85 +652,6 @@
   
   #navbar.sticky .navLink{
   color: white;
-  }
-  
-
-  
-  
-  *, *:after, *:before {
-     box-sizing: inherit;
-  }
-  .clip {
-     border: 0;
-     clip: rect(0 0 0 0);
-     height: 1px;
-     margin: -1px;
-     overflow: hidden;
-     padding: 0;
-     position: absolute;
-     width: 1px;
-  }
-   .svg--source {
-     display: none;
-  }
-   .svg--icon {
-     width: 100%;
-     max-width: 5rem;
-     height: 100%;
-     max-height: 5rem;
-     display: block;
-     margin: 0 auto;
-     fill: currentColor;
-  }
-   .wrapper {
-     width: 100%;
-     height: 100vh;
-     display: flex;
-     flex-wrap: wrap;
-     align-items: center;
-     justify-content: center;
-     padding: 1rem;
-  }
-   .share {
-     width: 5rem;
-     height: 5rem;
-     float: left;
-     margin: 0.5rem 1rem 0.5rem 0;
-     color: #353c4a;
-     border: 0.125rem solid #f3f3f3;
-     box-shadow: 0 0 8px 0 rgba(50, 50, 50, 0.15);
-     border-radius: 50%;
-     transition: 250ms;
-  }
-   .share:last-child {
-     margin-right: 0;
-  }
-   .share:focus {
-     outline-color: inherit;
-  }
-   .twitter:hover, .twitter:focus {
-     color: #00aced;
-     box-shadow: 0 0 24px 0 #00aced;
-  }
-   .github:hover, .github:focus {
-     color: #4183c4;
-     box-shadow: 0 0 24px 0 #4183c4;
-  }
-   .pinterest:hover, .pinterest:focus {
-     color: #bd081c;
-     box-shadow: 0 0 24px 0 #bd081c;
-  }
-   .youtube:hover, .youtube:focus {
-     color: #cd201f;
-     box-shadow: 0 0 24px 0 #cd201f;
-  }
-   .facebook:hover, .facebook:focus {
-     color: #3b5998;
-     box-shadow: 0 0 24px 0 #3b5998;
-  }
-   .google:hover, .google:focus {
-     color: #dd4b39;
-     box-shadow: 0 0 24px 0 #dd4b39;
   }
   
   
@@ -1127,4 +1048,94 @@
   border-radius: 30px;
   width: 40%;
   margin-left: 30%;
+}
+
+.wrapper{
+ margin: 100px 0 100px;
+}
+
+.wrapper .button{
+  display: inline-block;
+  height: 60px;
+  width: 60px;
+  margin: 0 10px;
+  overflow: hidden;
+  background: #fff;
+  border-radius: 50px;
+  cursor: pointer;
+  box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
+  transition: all 0.3s ease-out;
+}
+.wrapper .button:hover{
+  width: 200px;
+}
+.wrapper .button .icon{
+  display: inline-block;
+  height: 60px;
+  width: 60px;
+  text-align: center;
+  border-radius: 50px;
+  box-sizing: border-box;
+  line-height: 60px;
+  transition: all 0.3s ease-out;
+}
+.wrapper .button:nth-child(1):hover .icon{
+  background: #4267B2;
+  float: left;
+}
+.wrapper .button:nth-child(2):hover .icon{
+  background: #1DA1F2;
+  float: left;
+}
+.wrapper .button:nth-child(3):hover .icon{
+  background: #E1306C;
+  float: left;
+}
+.wrapper .button:nth-child(4):hover .icon{
+  background: #333;
+  float: left;
+}
+.wrapper .button:nth-child(5):hover .icon{
+  background: #ff0000;
+  float: left;
+}
+.wrapper .button .icon i{
+  font-size: 25px;
+  line-height: 60px;
+  transition: all 0.3s ease-out;
+}
+.wrapper .button:hover .icon i{
+  color: #fff;
+}
+.wrapper .button span{
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 60px;
+  margin-left: 10px;
+  transition: all 0.3s ease-out;
+}
+.wrapper .button:nth-child(1) span{
+  color: #4267B2;
+}
+.wrapper .button:nth-child(2) span{
+  color: #1DA1F2;
+}
+.wrapper .button:nth-child(3) span{
+  color: #E1306C;
+}
+.wrapper .button:nth-child(4) span{
+  color: #333;
+}
+.wrapper .button:nth-child(5) span{
+  color: #ff0000;
+}
+
+.ContactTag{
+  font-family: 'DynaPuff', cursive;
+}
+
+.ContactTagadd{
+  font-family: 'DynaPuff', cursive;
+  font-size: 20px;
+  color: rgb(243, 217, 22);
 }
