--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -932,7 +932,9 @@
     display: none;
     margin-top: 20px;
   }
-  img {vertical-align: middle;}
+  img {
+    vertical-align: middle;
+  }
   
   /* Slideshow container */
   .slideshow-container {
@@ -949,7 +951,6 @@
     top: 40%;
     width: auto;
     padding: 16px;
-    margin-top: -22px;
     color: white;
     font-weight: bold;
     font-size: 18px;
@@ -961,6 +962,11 @@
   /* Position the "next button" to the right */
   .next {
     right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+
+  .prev {
+    left: 0;
     border-radius: 3px 0 0 3px;
   }
   
