--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -969,7 +969,7 @@
 
   .prev {
     left: 0;
-    border-radius: 3px 0 0 3px;
+    border-radius: 0 3px 3px 0 ;
   }
   
   /* On hover, add a black background color with a little bit see-through */
