--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -301,6 +301,27 @@
   .Scrolltext{
   margin: 50px 0 20px ;
   }
+
+  .Bgimg01{
+    width: 35vh;
+    left: 42%;
+    position: relative;
+    margin: 45px 0 0;
+  }
+
+  .Bgimgh02{
+    width: 35vh;
+    right: 42%;
+    position: relative;
+    margin: 50px 0 0;
+  }
+
+  .Bgimgh03{
+    width: 35vh;
+    right: 42%;
+    position: relative;
+    margin: 20px 0 0;
+  }
   
   .container {
     position: absolute;
@@ -979,6 +1000,13 @@
   color: #777;
   background-color: var(--main-light);
   text-align:center;
+  padding:50px 80px  0;
+}
+
+.Bg001foot{
+  color: #777;
+  background-color: var(--main-light);
+  text-align:center;
   padding:50px 80px;
 }
 
@@ -993,7 +1021,7 @@
   color: #777;
   background-color:var(--bg-w-245);
   text-align:center;
-  padding:50px 80px;
+  padding:50px 80px 0;
 }
 
 /*.Bg001-dark{
@@ -1040,7 +1068,7 @@
 }
 
 .wrapper{  /*Social media button*/
- margin: 100px 0 100px;
+ margin: 100px 0 70px;
 }
 
 .wrapper .button{
@@ -1121,6 +1149,10 @@
 
 .ContactTag{
   font-family: 'DynaPuff', cursive;
+  text-align: center;
+  position: relative;
+  margin-top: 0;
+  display: flow-root;
 }
 
 .ContactTagadd{
