--- a/CSS/20220826_404.css
+++ b/CSS/20220826_404.css
@@ -88,3 +88,55 @@ img{
     font-weight: 400;
     font-family: 'Microsoft JhengHei', 'Microsoft Yahei', sans-serif;
 }
+
+#snackbar {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -180px;
+    background-color: rgb(235, 41, 41);
+    color: #fff;
+    text-align: center;
+    border-radius: 10px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    bottom: 30px;
+    font-size: 17px;
+    font-family: 'Microsoft JhengHei', 'Microsoft Yahei', sans-serif;
+  }
+
+  #snackbar::before{
+    content: "\00d7";
+    color: #fff;
+    font-size: 26px;
+    margin-right: 10px;
+    font-weight: bolder;
+  }
+
+  #snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
+
+  @-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;} 
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;} 
+    to {bottom: 0; opacity: 0;}
+  }
+  
+  @keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
+
