--- a/CSS/20220826_404.css
+++ b/CSS/20220826_404.css
@@ -111,7 +111,7 @@ img{
     color: #fff;
     font-size: 26px;
     margin-right: 10px;
-    font-weight: bolder
+    font-weight: bolder;
   }
 
   #snackbar.show {
