--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -50,7 +50,6 @@
     outline:0;
     height:100%;
     max-width:100%;
-    margin:0;
     font-family:"PingFang SC","Microsoft Yahei","Helvetica Neue",Helvetica,"Segoe UI",Arial,sans-serif;
     cursor:default;
     -webkit-tap-highlight-color:transparent;
@@ -90,6 +89,7 @@
 }
   
   .topBG {
+    background-attachment: fixed;
     position: relative;
     background-position: center;
     background-size: cover;
@@ -420,6 +420,7 @@
     font-size: 16px;
     color: #fff;
     text-decoration: none;
+    cursor: default;
   }
   
   .navbar{
