--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -345,6 +345,7 @@
     opacity: 0;
     transform: scale3d(0.5, 0.5, 0.5);
     animation: move 3s ease-out infinite;
+    cursor: pointer;
   }
   
   .chevron:first-child {
