--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -182,6 +182,16 @@
     font-weight: bold;
     font-family: 'Palanquin Dark', sans-serif;
   }
+
+  #topTitle h1::before{
+    content: '';
+    background-image: url('../Resources/icon/github.png');
+    background-size: 60px 60px;
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    margin-right: 30px;
+  }
   
 
   #topTitle h2{
