--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -714,6 +714,22 @@
       opacity: 0.85;
       padding: 20px 20px;
     }
+    
+    #snackbar {
+      visibility: hidden;
+      min-width: 250px;
+      margin-left: -125px;
+      background-color: var(--main-light);
+      color: var(--main-dark);
+      text-align: center;
+      border-radius: 10px;
+      padding: 16px;
+      position: fixed;
+      z-index: 1;
+      left: 47%;
+      bottom: 30px;
+      font-size: 17px;
+   }
   }
 
   
