--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -245,9 +245,10 @@ h3 {
 
 .PartTitle {
   text-align: center;
+  cursor: url(../Resources/cusor/pointer.cur), pointer;
 }
 
-.PartTitle::after {
+.PartTitle:hover::after {
   content: "#";
   font-size: 17px;
   color: var(--main-color);
@@ -667,7 +668,7 @@ button {
   }
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 490px) {
   #topTitle {
     top: 15%;
     position: absolute;
@@ -773,6 +774,14 @@ button {
   #musictitle {
     visibility: hidden;
     display: none;
+  }
+
+  #logBoxOuter {
+    position: relative;
+    left: 0; 
+    margin-top: 30px;
+    width: 100%; 
+    overflow: hidden;
   }
 }
 
