--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -181,10 +181,8 @@ html {
 }
 
 #topTitle {
-  position: absolute;
-  top: 28%;
-  width: 100%;
   text-align: center;
+  padding: 10% 0;
 }
 
 #topTitle h1 {
